--- a/ImageProcessingApp/app/src/main/res/layout/activity_main.xml
+++ b/ImageProcessingApp/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Guardar foto"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:id="@+id/ButtonSave"/>
 
 
 </LinearLayout>
